Added sound scalar, working on map icon world map